<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    style="@style/default_activity_main">

    <org.ligi.gobandroid_hd.ui.GoBoardView
        android:id="@+id/go_board"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <include layout="@layout/horizontal_divider" />

    <include layout="@layout/game_setup_inner" />


</LinearLayout>
