...
    <string name="ai_is_thinking">GnuGo AI is thinking.</string>
    <string name="circle">circle</string>
    <string name="square">square</string>
    <string name="triangle">triangle</string>
    <string name="number">number</string>
    <string name="letter">letter</string>
    <string name="handicap_only_for">Handicap only for 9x9 / 13x13 / 19x19</string>
    <string name="new_game">New game</string>
    <string name="no_definition_found">no Definition found</string>
    <string name="copy_sgf_dialog_message">Copying SGF\'s. Please wait...</string>
    <string name="betatest_opt_in_out">Betatest opt-in/out</string>
    <string name="improve_translation">Improve Translation</string>
    <string name="switch_variation_style">Show variation dialog</string>
...
